# CPU-DJ

./: .env  .gitignore  .startvenv.sh.kate-swp  CPU-DJ.py  LICENSE  README.md  build.bat  build.sh  embed.html  git_test.txt  icon.icns  main.py  pyproject.toml  require_mac.txt  require_win.txt  spotifyInteraction.py  startvenv.sh  state.py  to_un.txt
launcher/: CPU-DJ.py  build.bat
modules/: .env  .spotify.py.kate-swp  graphs.py  gui.py  processing.py  spotify.py  state.py  tasks.py  test_spotify.py
modules.old/: .spotify.py.kate-swp  gui.py  processing.py  spotify.py  tasks.py
